--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cat Collector</title>
-</head>
-<body>
-  <h1>About The Journal</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h1>About The Journal</h1>
+<hr />
+<p class="page-content">
+  The Journal - a platform dedicated to curating insightful content across a spectrum of topics. 
+  <br> We believe in the power of words to inspire, educate, and transform lives. 
+  <br> Whether it's wellness tips, mental health resources, expert advice, or explorations into hobbies and lifestyle, 
+  <br> "The Journal" is your trusted companion on the journey to holistic well-being. 
+  <br> Our team of dedicated writers and experts are passionate about delivering content that resonates with your aspirations and interests. 
+  <br> We aim to provide a space where you can discover, learn, and engage with a diverse range of articles that empower you to lead a fulfilling life. 
+  <br>Join us in this enriching experience and embark on a path of self-discovery and growth with "The Journal".
+</p>
+
+{% endblock %}
+
+
