define route to articles index page

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,16 +18,17 @@
 </head>
 <body>
   <header>
-    {% comment %} <div class="header-logo-container">
+    <div class="header-logo-container">
       <a href="/">
         <img 
-          src="{% static 'images/header-logo.svg' %}"
-          alt="The Cat Collector Logo"
+          src="{% static 'images/header-logo.png' %}"
+          alt="The Logo"
         >
       </a>
-    </div> {% endcomment %}
+    </div> 
     <nav>
       <ul>
+        <li><a href="/articles">Articles</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
