--- a/main_app/static/css/base.css
+++ b/main_app/static/css/base.css
@@ -1,3 +1,45 @@
 body {
   background-color: rgb(239, 235, 224);
 }
+
+nav {
+  margin: 10px;
+}
+
+ul {
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+  font-weight: 100;
+  font-size: 15px;
+}
+
+.header-logo-container {
+  width: 50px;
+  height: 50px;
+}
+
+.header-logo-container img{
+  width: 20px;
+  height: 20px;
+}
+
+nav a:hover {
+  color: olive;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+nav li {
+  padding: 5px 8px;
+}
