--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -22,16 +22,18 @@
 <section class="card-container">
   {% for article in articles %}
     <div class="card">
-      <div class="card-content">
-        <div class="card-img-container">
-          <img 
-            src="{% static 'images/header-logo.png' %}" 
-            alt="A card logo"
-          >
+      <a href="/articles/{{ article.id }}">
+        <div class="card-content">
+          <div class="card-img-container">
+            <img 
+              src="{% static 'images/header-logo.png' %}" 
+              alt="A card logo"
+            >
+          </div>
+          <h2 class="card-title">{{ article.name }}</h2>
+          <p><small>{{ article.description }}</small></p>
         </div>
-        <h2 class="card-title">{{ article.name }}</h2>
-        <p><small>{{ article.description }}</small></p>
-      </div>
+      </a>
     </div>
   {% endfor %}
 </section>
