update ArticleCreate view to assign new article to loggedin user

--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -13,7 +13,19 @@
   </div>
 </section>
 
-<section>
+{% if not user.is_authenticated %}
+  <section>
+    <form action="{% url 'home' %}" method="post" class="login">
+      <h1>Login</h1>
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input type="hidden" name="next" value="{{ next }}">
+      <button type="submit" class="btn submit">Login</button>
+    </form>
+  </section>
+{% endif %}
+
+{% comment %} <section>
   <form action="{% url 'home' %}" method="post" class="login">
     <h1>Login</h1>
     {% csrf_token %}
@@ -21,6 +33,6 @@
     <input type="hidden" name="next" value="{{ next }}">
     <button type="submit" class="btn submit">Login</button>
   </form>
-</section>
+</section> {% endcomment %}
 
 {% endblock %}
