--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -39,6 +39,7 @@
           <li><a href="{% url 'article-index' %}">Articles</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
           <li><a href="{% url 'home' %}">Login</a></li>
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
         {% endif %}
       </ul>
     </nav>    
