add css style to like button

--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -42,7 +42,7 @@
     </div>
     {% if user.is_authenticated %}
       <div class="like btn">
-        <img id="likeButton" src="{% static 'images/liked.png' %}" alt="like">
+        <img id="likeButton" src="{% static 'images/like.png' %}" alt="like">
         <span id="likeCount">{{ article.likes }}</span>
       </div>
     {% endif %}
