--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -7,12 +7,6 @@
 
 {% block content %}
 
-<section class="logo-container">
-  <div class="article-container">
-    <img src="{% static 'images/header-logo.png' %}" alt="Logo" />
-  </div>
-</section>
-
 {% if not user.is_authenticated %}
   <section>
     <form action="{% url 'home' %}" method="post" class="login">
@@ -24,6 +18,10 @@
     </form>
   </section>
 {% endif %}
+
+<video id="landingVideo" autoplay muted loop src="{% static 'images/landing.mov' %}"></video>
+
+
 
 {% comment %} <section>
   <form action="{% url 'home' %}" method="post" class="login">
