move signup link to login page

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -44,7 +44,7 @@
               alt="User"
             >
           </a></li>
-          <li><a href="{% url 'signup' %}">Sign Up</a></li>
+          {% comment %} <li><a href="{% url 'signup' %}">Sign Up</a></li> {% endcomment %}
   
           {% comment %} <li><a href="{% url 'home' %}">Login</a></li>
           <li><a href="{% url 'signup' %}">Sign Up</a></li> {% endcomment %}
