--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,10 +20,7 @@
   <header>
     <div class="header-logo-container">
       <a href="/">
-        <img 
-          src="{% static 'images/header-logo.png' %}"
-          alt="The Logo"
-        >
+        <p id="main-heading">The Journal</p>
       </a>
     </div> 
     <nav>
