--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -19,8 +19,9 @@
   </section>
 {% endif %} {% endcomment %}
 
-<video id="landingVideo" autoplay muted loop src="{% static 'images/landing.mov' %}"></video>
+{% comment %} <video id="landingVideo" autoplay muted loop src="{% static 'images/landing.mov' %}"></video> {% endcomment %}
 
+<video id="landingVideo" autoplay muted loop src="{% static 'images/landing-page.mov' %}"></video> 
 
 
 {% comment %} <section>
