--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -21,7 +21,7 @@
 
 {% comment %} <video id="landingVideo" autoplay muted loop src="{% static 'images/landing.mov' %}"></video> {% endcomment %}
 
-<video id="landingVideo" autoplay muted loop src="{% static 'images/landing-page.mov' %}"></video> 
+<video id="landingVideo" autoplay muted loop src="{% static 'images/landing1.mov' %}"></video> 
 
 
 {% comment %} <section>
