--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -16,7 +16,7 @@
 <img src="{% static 'images/teacup-cat.svg' %}" alt="A cat in a teacup" />
 <img src="{% static 'images/cat-in-box.svg' %}" alt="A cat in a box" /> {% endcomment %}
 <section class="page-header">
-  <h1>Article List</h1>
+  <p>Articles</p>
 </section>
 
 <section class="card-container">
@@ -31,6 +31,7 @@
             >
           </div>
           <h2 class="card-title">{{ article.title }}</h2>
+          <p><small> <span clas="created">Created at </span> {{ article.created_at|date:"F d, Y" }}</small></p>
           <p><small>{{ article.main_content}}</small></p>
           <hr />
           <p>Read Article</p>
