--- a/main_app/static/css/articles/article-detail.css
+++ b/main_app/static/css/articles/article-detail.css
@@ -1,13 +1,100 @@
 
+.article-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.article-details {
+  flex: 1; 
+  padding: 35px;
+}
+
+.article-title h1 {
+  font-size: 90px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  margin-top: 0;
+} 
+
+.created {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 15px;
+  width: 50px;
+}
+
+.media-container {
+  flex: 1; 
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+}
+
+.photo-section1,
+.photo-section2,
+.content-section1,
+.content-section2 {
+  width: 100%;
+}
+
+.photo-section1,
+.photo-section2 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.photo-section1 img {
+  width: 48%; 
+}
+
+.photo-section2 img {
+  width: 80%;
+  padding-left: 10%;
+}
+
+.content-section1 {
+  border-left: solid 1px black;
+  padding-left: 15px;
+}
+
+
+
 #likeButton {
   cursor: pointer;
   transition: transform 0.2s; 
   width: 15px;
   height: 15px;
   margin-left: 10px;
+  margin-top: -1%;
 }
 
 
 #likeButton:hover {
   transform: scale(1.1); 
+}
+
+.article-actions {
+  display: flex;
+  justify-content: end;
+  gap: 20px; 
+  margin-top: 10px; 
+  margin-top: -2%;
+  margin-right: 2%;
+}
+
+.article-actions a {
+  text-decoration: none;
+  color: black;
+  text-transform: lowercase;
+}
+
+.article-actions a:hover {
+  color: #64613e;
+}
+
+.article-actions .btn {
+  margin: 0; 
+}
+
+.line {
+  margin-top: 20px;
 }
