--- a/main_app/templates/articles/index.html
+++ b/main_app/templates/articles/index.html
@@ -26,7 +26,7 @@
         <div class="card-content">
           <div class="card-img-container">
             <img 
-              src="{% static 'images/header-logo.png' %}" 
+              src="{% static 'images/cover.jpeg' %}" 
               alt="A card logo"
             >
           </div>
