--- a/main_app/templates/articles/detail.html
+++ b/main_app/templates/articles/detail.html
@@ -27,7 +27,7 @@
     <div class="media-container">
 
       <div class="photo-section1">
-        {% if cat.photo.url %}
+        {% if article.photo.url %}
           <img 
             src="{{article.photo.url}}" 
             alt="A photo of {{article.title}}"
@@ -79,7 +79,7 @@
       {% endif %}
     </div> 
 
-    <h3>Change {{ article.title }}'s photo</h3>
+    <h3>Change Photo</h3>
     <p id="file-name"></p>
     <form 
       action="{% url 'add-photo' article.id %}"
